# apiPlayground

./: .env.example  .gitignore  .npmrc  EXPLORER-GUIDE.md  README.md  RECOVERY_STEPS.md  TESTING-GUIDE.md  analysis-report.json  doctauri.txt  index.html  libglib2.0-dev_2.88.0-1_amd64.deb  lint-results.txt  package.json  pkg-config_2.5.1-4_amd64.deb  pnpm-lock.yaml  pnpm-workspace.yaml  tmp_replace_flask.ps1  tmp_route_check.py  tmp_route_check_root.py
api-endpoint-test(1)/: .env.example  APPLICATION_FEATURE_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  eslint-report.json  eslint.config.mjs  lint-output-after-insights-utf8.txt  lint-output-after-insights.txt  lint-output-utf8-final-2.txt  lint-output-utf8-final.txt  lint-output-utf8.txt  lint-output.txt  lint-results.json  next.config.js  next.config.mjs  package-lock.json  package.json  report.json  tmp-java-ast-inspect.js  tmp-java-ast-inspect10.js  tmp-java-ast-inspect11.js  tmp-java-ast-inspect12.js  tmp-java-ast-inspect13.js  tmp-java-ast-inspect2.js  tmp-java-ast-inspect3.js  tmp-java-ast-inspect4.js  tmp-java-ast-inspect5.js  tmp-java-ast-inspect6.js  tmp-java-ast-inspect7.js  tmp-java-ast-inspect8.js  tmp-java-ast-inspect9.js  tmp-java-ast.js  tmp_inspect2.py  tmp_inspect_flask_line.py  tmp_patch_detection.py  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs  mcp.rs  mock_matcher.rs  mock_store.rs  mock_types.rs
src-tauri/src/websocket/: commands.rs  manager.rs  types.rs
(+761 files in other folders)
