[package]
name = "reqly"
version = "0.1.0"
description = "Reqly Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reqly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tokio = { version = "1", features = ["time", "rt"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
rfd = "0.15"
base64 = "0.22"
